// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[babel]} 1`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #0 format[babel]} 2`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #0 format[babel]} 3`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #0 format[babel]} 4`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #0 format[babel]} 5`] = `
"Unexpected string, expected an identifier (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #0 format[babel]} 6`] = `
"An export name cannot include a lone surrogate (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^^^^^^^^
Cause: [1:9-1:17]: An export name cannot include a lone surrogate"
`;

exports[`snippet: #0 format[babel]} 7`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate. (1:9)"
`;

exports[`snippet: #0 format[babel]} 8`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate."
`;

exports[`snippet: #0 format[babel]} 9`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate."
`;

exports[`snippet: #0 format[babel]} 10`] = `
"'identifier' expected in import specifier (1:9)
> 1 | import { "\\uD83C" as b } from "./foo";
    |         ^
Cause: 'identifier' expected in import specifier (1:9)
import { "\\uD83C" as b } from "./foo";
       ~~^"
`;

exports[`snippet: #0 format[babel]} 11`] = `
"An export name cannot include a unicode lone surrogate (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #0 format[babel]} 12`] = `
"An export name cannot include a unicode lone surrogate (1:10)
> 1 | import { "\\uD83C" as b } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #1 format[babel]} 1`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #1 format[babel]} 2`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #1 format[babel]} 3`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #1 format[babel]} 4`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #1 format[babel]} 5`] = `
"Unexpected string, expected an identifier (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #1 format[babel]} 6`] = `
"An export name cannot include a lone surrogate (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^^^^^^^^
Cause: [1:9-1:17]: An export name cannot include a lone surrogate"
`;

exports[`snippet: #1 format[babel]} 7`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate. (1:9)"
`;

exports[`snippet: #1 format[babel]} 8`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate."
`;

exports[`snippet: #1 format[babel]} 9`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate."
`;

exports[`snippet: #1 format[babel]} 10`] = `
"'identifier' expected in export clause (1:9)
> 1 | export { "\\uD83C" } from "./foo";
    |         ^
Cause: 'identifier' expected in export clause (1:9)
export { "\\uD83C" } from "./foo";
       ~~^"
`;

exports[`snippet: #1 format[babel]} 11`] = `
"An export name cannot include a unicode lone surrogate (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #1 format[babel]} 12`] = `
"An export name cannot include a unicode lone surrogate (1:10)
> 1 | export { "\\uD83C" } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #2 format[babel]} 1`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #2 format[babel]} 2`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #2 format[babel]} 3`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #2 format[babel]} 4`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:9)"
`;

exports[`snippet: #2 format[babel]} 5`] = `
"Unexpected string, expected an identifier (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #2 format[babel]} 6`] = `
"An export name cannot include a lone surrogate (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^^^^^^^^
Cause: [1:9-1:17]: An export name cannot include a lone surrogate"
`;

exports[`snippet: #2 format[babel]} 7`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate. (1:9)"
`;

exports[`snippet: #2 format[babel]} 8`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate."
`;

exports[`snippet: #2 format[babel]} 9`] = `
"An export name cannot include a lone surrogate. (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^
Cause: An export name cannot include a lone surrogate."
`;

exports[`snippet: #2 format[babel]} 10`] = `
"'identifier' expected in export clause (1:9)
> 1 | export { "\\uD83C" as b } from "./foo";
    |         ^
Cause: 'identifier' expected in export clause (1:9)
export { "\\uD83C" as b } from "./foo";
       ~~^"
`;

exports[`snippet: #2 format[babel]} 11`] = `
"An export name cannot include a unicode lone surrogate (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #2 format[babel]} 12`] = `
"An export name cannot include a unicode lone surrogate (1:10)
> 1 | export { "\\uD83C" as b } from "./foo";
    |          ^^^^^^^^"
`;

exports[`snippet: #3 format[babel]} 1`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:14)"
`;

exports[`snippet: #3 format[babel]} 2`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:14)"
`;

exports[`snippet: #3 format[babel]} 3`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:14)"
`;

exports[`snippet: #3 format[babel]} 4`] = `
"An export name cannot include a lone surrogate, found '\\ud83c'. (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^
Cause: An export name cannot include a lone surrogate, found '\\ud83c'. (1:14)"
`;

exports[`snippet: #3 format[babel]} 5`] = `
"Unexpected string, expected an identifier (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^^^^^^^^"
`;

exports[`snippet: #3 format[babel]} 6`] = `
"An export name cannot include a lone surrogate (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^^^^^^^^
Cause: [1:14-1:22]: An export name cannot include a lone surrogate"
`;

exports[`snippet: #3 format[babel]} 7`] = `
"An export name cannot include a lone surrogate. (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^
Cause: An export name cannot include a lone surrogate. (1:14)"
`;

exports[`snippet: #3 format[babel]} 8`] = `
"An export name cannot include a lone surrogate. (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^
Cause: An export name cannot include a lone surrogate."
`;

exports[`snippet: #3 format[babel]} 9`] = `
"An export name cannot include a lone surrogate. (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^
Cause: An export name cannot include a lone surrogate."
`;

exports[`snippet: #3 format[babel]} 10`] = `
"'identifier' expected in export clause (1:14)
> 1 | export { b as "\\uD83C" } from "./foo";
    |              ^
Cause: 'identifier' expected in export clause (1:14)
export { b as "\\uD83C" } from "./foo";
       ~~~~~~~^"
`;

exports[`snippet: #3 format[babel]} 11`] = `
"An export name cannot include a unicode lone surrogate (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^^^^^^^^"
`;

exports[`snippet: #3 format[babel]} 12`] = `
"An export name cannot include a unicode lone surrogate (1:15)
> 1 | export { b as "\\uD83C" } from "./foo";
    |               ^^^^^^^^"
`;
